--- a/package.json
+++ b/package.json
@@ -3,10 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.696.0",
+    "@aws-sdk/lib-dynamodb": "^3.696.0",
     "@maplibre/maplibre-gl-leaflet": "^0.0.22",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1692.0",
+    "axios": "^1.7.7",
+    "browser-image-compression": "^2.0.2",
+    "gh-pages": "^6.2.0",
+    "heic2any": "^0.0.4",
     "leaflet": "^1.9.4",
     "leaflet-css": "^0.1.0",
     "maplibre-gl": "^4.7.1",
@@ -14,14 +21,18 @@
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-scripts": "5.0.1",
+    "uuid": "^11.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "https://ericbratu.github.io/someplace-else-uf",
   "eslintConfig": {
     "extends": [
       "react-app",
