--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.7",
     "browser-image-compression": "^2.0.2",
-    "gh-pages": "^6.2.0",
     "heic2any": "^0.0.4",
     "leaflet": "^1.9.4",
     "leaflet-css": "^0.1.0",
@@ -50,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
